--- a/groups/gtApplications.tex
+++ b/groups/gtApplications.tex
@@ -1,4 +1,7 @@
-\chapter{Applications}
+\chapter{Applications of Signalizers and Amalgams for groups with solvable proper subgroups}
+\section {Outline and definitions}
+We refer to the major classification theorems in the Classiﬁcation of Finite Simple Groups section.  The
+goal here is to classify the $N$-groups, as defined below by reducing to these cases.
 \section {N-groups}
 {\bf $N$-group:}  Non solvable groups all of whose $2$-local subgroups are solvable.
 \\
@@ -6,7 +9,10 @@
 {\bf Condition Z:}  $N_G(\Omega({\mathbb Z}(S))) \le N_G(S)$ for $S \in S_2(G)$.
 \\
 \\
-{\bf Definition ZN-group:} An $N$-group which satisfies condition Z.
+{\bf Definition ZN-group:} An $N$-group which satisfies condition $Z$.
+\\
+\\
+{\bf Condition {\cal C}:}  $G$ is of even order and $C(t)$ is solvable $\forall t \in Inv(G)$.
 \\
 \\
 {\bf Recall:}  $M$ is \emph{strongly-embedded} if
@@ -23,43 +29,98 @@ Given the definition of $p$-separable, this was proved earlier.
 {\bf Observation:} For an $N$-group, $O_{2'}(L)=1$ for all $2$-locals, $L$.
 \\
 \\
-{\bf Modified $ZN$ Theorem:}  Let $G$ be a $ZN$-group with $O_{2'}(G)=1=O_2(G)$ and $S \in S_2(G)$.
-Put
+{\bf Modified $ZN$ Theorem (Theorem 1):}  Let $G$ be a $ZN$-group
+with $O_{2'}(G)=1=O_2(G)$ and $S \in S_2(G)$.  Put
 $Z= O^2(G)$, $R= S \cap H$.  One of the following holds:\\
-(1) $H$ contains a strongly embedded subgroup (then apply Bender).\\
-(2) $R$ is dihedral or semi-dihedral (then apply Gorenstein Walter).\\
+(1) $H$ contains a strongly embedded subgroup.\\
+(2) $R$ is dihedral or semi-dihedral.\\
 (3) $Z \cap R \cong C_2$ and $Z \cap R$ is weakly closed in $R$ with respect to 
-$H$ (then apply the $Z^*$ theorem).\\
-(4) $\Omega(R)=Z= C_2 \times C_2$ (then apply Goldschmidt).
-\begin{quote}
-\end{quote}
-{\bf Condition {\cal C}:}  $G$ is of even order and $C(t)$ is solvable $\forall t \in Inv(G)$.
+$H$.\\
+(4) $\Omega(R)=Z= C_2 \times C_2$.
+\\
+The first outcome is handled by Bender's classification.  The second by the Gorenstein-Walter
+classification and the Alperin-Brauer-Gorenstein classification.  The third case is handled by the $Z^*$
+theorem and the fourth case is handled by Goldschmidt's classification of groups with a strongly-closed
+abelian $2$-subgroup.
 \\
 \\
-{\bf Condition {\cal S}:}  $G$ is a $ZC$ group, $H=O^2(G)$ and
-$S \in S_2(G), Z= \Omega({\mathbb Z}(S)), T= S \cap H \in S_2(H()$.
+{\bf Definition:}  $G$ has local characteristic $2$-type if $|G|$ has even order and
+$C_L(O_2(L)) \leq O_2(L)$.
 \\
 \\
-{\bf Definition:}  Suppose $G$ satisfies ${\cal C}$ and $O_{2'}(C(t)) \ne 1, \forall t \in Inv(G)$
-\\
-\\
-\section{Completeness Results}
-{\bf Theorem 1:}  Let $G$ be a $ZC$-group with $O_{2'}(G)=1=O_2(G)$ then case (1), (3) or (4)
+{\bf Theorem 2:}  Let $G$ be a $ZC$-group with $O_{2'}(G)=1=O_2(G)$ then case (1), (3) or (4)
 of the Modified $ZN$ Theorem holds or $O^2(G) \Omega({\mathbb Z}(S))$ has local characteristic $2$.
+\\
+\\
+{\bf Theorem 3:} Let $G$ be a $ZN$-group with $O_2(G)= 1$ then either (a)
+$G$ possesses a strongly embedded subgroup or (b) there are two maximal $2$-local subgroups,
+$M_1, M_2$ of $O^2(G)$ such that $M_1 \cong M_2 \cong S_4$ and $M_1 \cap M_2 \in S_2(M_i), i = 1,2$.
+\\
+\\
+Note: Conclusion (b) of theorem 3 implies case (2) of theorem 1.
+\section{Application of the Completeness Results}
+{\bf Theorem:}  Suppose $G$ satisfies ${\cal C}$ and $O_{2'}(C(t)) \ne 1, \forall t \in Inv(G)$,
+then $G$ has local characteristic $2$-type.
 \begin{quote}
 \end{quote}
-{\bf Theorem 2:} Let ${\cal B}$ be the set of maximal Abelian $2$-subgroups of $G$ that contain
+{\bf Theorem:} Let ${\cal B}$ be the set of maximal Abelian $2$-subgroups of $G$ that contain
 an elementary abelian subgroup of rank $3$ then 
 $\theta_B: a \mapsto O_{2'}(C_G(a)), a \in \Omega(B)^{\#}$ for $B \in {\cal B}$ is a solvable
 signalizer function.  Denote its maximal element as $\theta_B(G)$.
 \begin{quote}
 \end{quote}
+Now we begin the proof of theorem 2 above.
+\\
+\\
+{\bf Condition {\cal S}:}  $G$ is a $ZC$ group with $O(G)= O_2(G)=1$.
+$H=O^2(G)$ and
+$S \in S_2(G), Z= \Omega({\mathbb Z}(S)), T= S \cap H \in S_2(H)$. ${\cal B}(G)$ is the set
+of maximal abelian $2$-groups of $G$ that contain a subgroup of order $8$.   For $B \in {\cal B}(G)$,
+$\theta_B(G): a \mapsto O_{2'}(C_G(a)), a \in \Omega(B)^\#$.  $\theta_B$ is a solvable $\Omega(B)$
+signalizer functor.  For $R = \theta_B(G)$, (1) $C_R(a) = O_{2'}(C_G(a)), a \in B^\#$,
+(2) $C_R(B_0) = O_{2'}(C_G(B_0)), 1 \neq B_0 \leq B$, (3) $R= \langle O_{2'}(C_G(a)), a \in B^\# \rangle$,
+(4) $R^g = \theta_{B^g}(G)$ for $g \in G$ so $N_G(B) \leq N_G(R)$.
+\\
+\\
 \section{$J(T)$-Components}
 {\bf Theorem 3:}  Let $G$ be a $ZN$-group ofl local characteristic $2$ with $O_2(G)=1$ then
 $G$ possesses a strongly embedded subgroup or there are two maximal $2$-locals $M_1$ and $M_2$
 of $O^2(G)$ such that $M_1 \cong S_2 \cong M_2$ and $M_1 \cap M_2 \in S_2(M_i)$.
 \begin{quote}
 \end{quote}
-\section{$N$-groups of local characteristic $2$}
 
-
+\section{$N$-groups of characteristic $2$-type}
+$G$ is a $ZN$-group of local characteristic $2$-type with $O_2(G)=1$, $S \in S_2(G), Z = \Omega(Z(S))$
+and $M$ is a $2$-local containing $N_G(J(S))$.
+\\
+\\
+{\bf Definition:}  ${\cal T}(M)$ is a set of $2$ subgroups $T \leq M$ such that
+there is a $2$-local $L$, $T \leq L \leq G$ and $L \not\leq M$.
+\\
+\\
+{\bf Theorem:} $M$ is strongly embedded in $G$ iff ${\cal T}(M)= \emptyset$.
+\begin{quote}
+\emph{Proof:} If ${\cal T}(M)= \emptyset$ then $M$ is strongly embedded.  
+Suppose ${\cal T}(M) \neq \emptyset$ and $M$ is strongly embedded.  $N_G(T) \leq M, T \in {\cal T}(M)$.
+Choose $T \in {\cal T}(M)$ with $|M|$ maximal and let $T \leq L \leq G$ and $L \not\leq M$.
+$N_{N_0}(T) \leq M \cap L$ for $T \leq T_0 \in S_2(L)$ so $T=N_{T_0}(T)=T_0$ by maximality.
+$O_2(L) \leq T_0 \leq M \cap L$ so $O_2(L) \in {\cal T}(M)$ thus $L \leq N_G(O_2(L)) \leq M$, a contradiction.
+Apply Thompson Transfer lemma.
+\end{quote}
+The Amalgam results give.\\
+{\bf Theorem:} Let $T \in {\cal T}(M)$.  There exist two different maximal $2$-locals, $P_1 , P_2$ with
+$P_i \in S_2(T), i = 1, 2$ and either $P_1 \cong P_2 \cong S_4$ or $P_1 \cong P_2 \cong S_4 \times {\mathbb Z}_2$.
+\begin{quote}
+\end{quote}
+{\bf Proof of theorem 3}
+\begin{quote}
+Assume $M$ is not strongly embedded. Suffices to show $M_1 \cong M_2 \cong S_4$
+\end{quote}
+{\bf Proof of theorem 1}
+\begin{quote}
+We may assume $HZ$ has local characteristic $2$.  If $HZ$ has a strongly embedded subgroup, we're done.  Otherwise,
+$H$ contains a maximal $2$-local, $P \cong S_4$.  $O_2(P) \cong {\mathbb Z}_2 \times {\mathbb Z}_2$ and $P= N_H(O_2(P))$.
+$D \in S_2(P)$ is dihedral of order $8$.  After conjugation, $D \leq S \cap H = R$. Put $Z^*= \Omega(Z(R))$. 
+$Z^* \leq O_2(P)$ and $\exists t \in Inv(O_2(P))$ with $O_2(P) = Z^* \times \langle t \rangle$.  Thus
+$C_R(t) = C_R(O_2(P)) = O_2(P)$ and $R$ is dihedral or semi dihedral.
+\end{quote}
