--- a/groups/gtFrobenius.tex
+++ b/groups/gtFrobenius.tex
@@ -31,7 +31,7 @@ let $P \in S_5(N)$.  $P \lhd N$ and $P$ is contained in a Sylow $p$ group $P^*$.
 $\langle N, P^* \rangle= N_G(P)$.  $3^2 \cdot 7^2 \mid |N_G(P)|$ and $n_p = 3$ but this violates
 the permutation bound on the index of subgroups in $G$.
 \end{quote}
-{\bf Application:} No gorup, $G$, of order $3159= 3^4 \cdot 13$ is simple.
+{\bf Application:} No group, $G$, of order $3159= 3^4 \cdot 13$ is simple.
 \begin{quote}
 $13 \ne 1 \jmod{3^2}$ so $\exists P, R \in S_3(G)$: $|P:P \cap R| = 3$.  Put $N= N_G(P \cap R)$, $P, R \leq N$,
 so $3^4 \mid |N|$ since $|N| > 3^4$, $G = N$ and $P \cap R \lhd G$.
