--- a/groups/gtCNclass.tex
+++ b/groups/gtCNclass.tex
@@ -126,9 +126,9 @@ These properties show that $|G|=p^a q^b$ and so $G$ is solvable by Burnside's th
 \end{quote}
 \section {More on $SL_2(p)$}
 {\bf Lemma:}
-$|SL_2(5)|= 2^3 3 5$,
-$|SL_2(7)|= 2^4 3 7$,
-$|SL_2(17)|= 2^5 3^2 17$.  In $SL_2(17)$, let
+$|SL_2(5)|= 2^3 \cdot 3 \cdot 5$,
+$|SL_2(7)|= 2^4 \cdot 3 \cdot 7$,
+$|SL_2(17)|= 2^5 \cdot 3^2 \cdot 17$.  In $SL_2(17)$, let
 $u= \left(
 \begin{array}{cc}
 1 &  1 \\
@@ -165,7 +165,7 @@ $
 5 &  0 \\
 0 &  7\\
 \end{array}
-\right)^{16} = 1$
+\right)^{16} = 1$.
 \section {Role in classification}
 The induction step in a classification (in particular the odd order theorem) for $G$ can use the following (1) minimal normal subgroups of a maximal
 subgroup of $G$ are $p$-groups so (2) every proper subgroup is a $p$-local.  Thus maximal subgroups are actually maximal
