--- a/groups/gtFSGMotivation.tex
+++ b/groups/gtFSGMotivation.tex
@@ -99,15 +99,14 @@ ${\overline {C(a)}}= C(a)/O(C(a))$: $O(Aut_{\overline {C(a)}}({\overline L})) \c
 \\
 \\
 {\bf Component group conjecture:} Let $H$ be simple with $H \leq G \leq Aut(H)$, $x \in Inv(G)$.  Let ${\overline L}$
-be a component of ${\overline {C(x)}} = C(x)/O(C(x))$ is known, then $G$ is a known simple group.\\
+be a component of ${\overline {C(x)}} = C(x)/O(C(x))$ which is a known simple group, then $G$ is a known simple group.\\
 \\
-Now let $G$ be a minimal counterexample then either $G$ is balenced or there is an unbalenced component, ${\overline L}$
-is a quasi-simple group of unbalenced type.
+Now let $G$ be a minimal counterexample then either $G$ is balenced or there is an unbalenced component, ${\overline L}$.
 \\
 \\
-{\bf Definition:} A quasisimple gropup, $L$, is a \emph{standard subgroup} of $G$, if $K=C_G(L)$ is tightly embedded in $G$,
-$N_G(K)=N_G(L)$ and $L$ commutes with none of its conjugates.  $K$ is tightly embedded in $G$ if $|K|$ is even and $|K \cap K^g|$
-is odd if $K^g \ne K$.
+{\bf Definition:} A quasisimple group, $L$, is a \emph{standard subgroup} of $G$, if $K=C_G(L)$ is
+tightly embedded in $G$, $N_G(K)=N_G(L)$ and $L$ commutes with none of its conjugates.
+$K$ is tightly embedded in $G$ if $|K|$ is even and $|K \cap K^g|$ is odd if $K^g \ne K$.
 \\
 \\
 {\bf Standard Form Problem for $X$:}  If $H$ is simple, $H \leq G \leq Aut(H)$ and $L$ is a standard subgroup of $G$
@@ -145,7 +144,9 @@ We want to show $x \in G, |x|=p$ with $C_G(X) = H$ in standard form with $O_{p'}
 $E(C(x)/(O_{p'}(C(x))) = E(C(x)) O_{p'}(C(x))/O_{p'}(C(x))$.
 \\
 \\
-We use a signalizer to analyze $O_{p'}(H)$.  $\theta(A) \lhd G$.  Consider ${\cal D}(G, \Omega)$ with $A, B$ adjacent
-iff $[A, B] = 1$.  For $B, D \in \Omega$ adjacent, $\theta(B)=\theta(BD)=\theta(D)$ then $\theta(A) = \theta(A)^g$ so
+We use a signalizer to analyze $O_{p'}(H)$.  $\theta(A) \lhd G$.  Consider
+${\cal D}(G, \Omega)$ with $A, B$ adjacent
+iff $[A, B] = 1$.  For $B, D \in \Omega$ adjacent,
+$\theta(B)=\theta(BD)=\theta(D)$ then $\theta(A) = \theta(A)^g$ so
 $\theta(A) \lhd G$.
 
