--- a/groups/gtTransfer.tex
+++ b/groups/gtTransfer.tex
@@ -80,7 +80,7 @@ The map $g \mapsto g^n$ is a homomorphism from $G$ into ${\mathbb Z}(G)$ and so 
 in the kernel.
 \end{quote}
 {\bf Theorem 5:} 
-Let $X$ be a finite subseteq of $G$ closed under conjugation and 
+Let $X$ be a finite subset of $G$ closed under conjugation and 
 suppose $\exists n: x^n = 1, \forall x \in X$ then $ \langle X \rangle $ is a 
 finite subgroup of $G$.
 \begin{quote}
