--- a/groups/gtTransfer.tex
+++ b/groups/gtTransfer.tex
@@ -290,7 +290,7 @@ $X \le O_p(G)$ or $\exists g: \langle X, X^g \rangle $ is not a $p$-group.
 \emph{Proof:}  
 See the stability section.
 \end{quote}
-{\bf Theorem 14:} If $Q$ is an abelian sylow subgroup in $G$ and if $Q \subseteq {\mathbb Z}(G)$ then
+{\bf Theorem 14:} If $Q$ is an abelian Sylow subgroup in $G$ and if $Q \subseteq {\mathbb Z}(G)$ then
 $V_{G \rightarrow Q}(g)= g^{|G:Q|}, \forall g \in G$.  
 \begin{quote}
 \emph{Proof:}  
