--- a/groups/gtCoprime.tex
+++ b/groups/gtCoprime.tex
@@ -49,6 +49,12 @@ $C_{G/N}(A)= C_G(A)N/N$ and
 If $Ng$ is in $C_G(A)N/N$, $(Ng)^A=Ng$ and by
 the lemma, $\exists c \in C_G(A): Ng=Nc$, proving (i).  ii follows directly from the Lemma.
 \end{quote}
+{\bf Theorem:} Let $Y \lhd X \in \pi$ and $[Y,A]=1$ $(|A|, |X|) = 1$.  If $C_X(Y) \subseteq Y$ then $[X,A]=1$.
+\begin{quote}
+\emph{Proof:}
+$[X, Y] \subseteq Y$, so $[X, Y, A] = 1$.  $[Y, A, X] =1$ so $[A, X, Y] = 1$.
+$[X, A] \subseteq Y$.  Thus $[X,A,A]=1$ and $[X,A]=1$.
+\end{quote}
 {\bf Alternate proof of 2, 4:}
 \begin{quote}
 \emph{Proof:}
