--- a/groups/gtStability.tex
+++ b/groups/gtStability.tex
@@ -131,6 +131,17 @@ $p$-elements $a, b$.
 $a C_G(V) \in O_p ( G/C_G(V))$.
 \\
 \\
+{\bf Example of non-$p$-stable group:} $G= 
+\left(
+\begin{array}{cc}
+A & 0 \\
+u & 1 \\
+\end{array}
+\right)
+$, $A \in SL_2(p), u= (\alpha, \beta)$. $V$ consists of lower triangular matricies. $V = O_p(G)$ and
+$G/V \cong SL_2(p)$.  $G$ is not $p$-stable.
+\\
+\\
 {\bf Question:}  If $V/F_q$, $q= p^n$, is a faithful $G$-module, when does a $p$ element of
 $G$ have a quadratic minimal polynomial?  This is trivial for $p=1$ and is true for
 all elements of $SL_2(q)$.  Let $G$ be a group and $O_p(G)=1, p \ne 2$
