orbitals and Gashutz

--- a/groups/gtConstruct.tex
+++ b/groups/gtConstruct.tex
@@ -160,3 +160,9 @@ Define $\varphi : G \rightarrow D \wr_r Q$ by
 $\varphi(a) = (\sigma_a, {\overline a}), \forall a \in G$.  A simple calculation shows
 $\varphi$ is a injective homomorphism.
 \end{quote}
+{\bf Theorem 8 (Gaschutz):} Let $V$ be an abelian normal subgroup of a $p$-group, $G$, $P \in S_p(G)$.
+$G$ splits over $V$ iff $P$ splits over $V$.
+\begin{quote}
+\emph{Proof:}
+$V \leq P$.  $P = P \cap G = P \cap HV$ so $P = V (P \cap H)$ by Dedekind.
+\end{quote}
