--- a/groups/gtNilpotent.tex
+++ b/groups/gtNilpotent.tex
@@ -122,7 +122,7 @@ it is elemenetary abelian.
 the maximal subgroups of $G$ containing $N$.
 \end{quote}
 {\bf Theorem 9:} If $S \subseteq G$ and $ \langle S, \Phi(G) \rangle =G$ then $ \langle S \rangle
-=G$.
+=G$.  If $H/\Phi(H)$ is cyclic then $H$ is cyclic.
 \begin{quote}
 \emph{Proof:}  Suppose $ \langle S \rangle
 =H < G$. Let  $M$ be a maximal subgroup containing $H$.  
