--- a/groups/gtPermutations.tex
+++ b/groups/gtPermutations.tex
@@ -119,7 +119,13 @@ orbits of $G_{\alpha}$. The \emph{rank of the permutation group} is number of or
 $\Delta^p= \{ (y,x): (x, y) \in \Delta \}$ is called the \emph{paired orbit}.
 \\
 \\
-{\bf Theorem 5:}
+{\bf Theorem 5.1:} 
+(a) A non-diagonal orbital is self-paired iff $(x,y)$ and $(y,x)$ are in the same orbit.\\
+(b) $G$ has a non-diagonal self paired orbital iff $G$ has even order. \\
+(c) If $G$ is of even order and rank-3, both non-diagonal orbitals are self paired.
+\begin{quote}
+\end{quote}
+{\bf Theorem 5.2:}
 On a self-paired orbit $\Delta$, the graph ${\cal G}=(G, X,\Delta)$ is 
 symmetric and $G$ is transitive on edges.
 \begin{quote}
