small add for solid angle of cones

--- a/science/math4.tex
+++ b/science/math4.tex
@@ -333,6 +333,10 @@ subtracting EQ 1 from this and dividing by $2$ gives the desired result.
 Let $n_i$: number of vertices with valence $i$, $2e \geq 3F$, $\sum in_i = 2E$.
 \\
 \\
+{\bf solid angle formed by cone with apex at center of sphere and apex angle $\theta$:}
+$\Omega = 4 \pi sin^2({\frac {\theta} 2})$/
+\\
+\\
 {\bf Differential Geometry:}
 Curve length: $s(t)= \int_{t_0}^t | \gamma'(t)| dt$.  Let $'$ be differentiation with respect to
 $s$.
