--- a/science/math4.tex
+++ b/science/math4.tex
@@ -334,7 +334,7 @@ Let $n_i$: number of vertices with valence $i$, $2e \geq 3F$, $\sum in_i = 2E$.
 \\
 \\
 {\bf solid angle formed by cone with apex at center of sphere and apex angle $\theta$:}
-$\Omega = 4 \pi sin^2({\frac {\theta} 2})$/
+$\Omega = 4 \pi sin^2({\frac {\theta} 2})$.
 \\
 \\
 {\bf Differential Geometry:}
