--- a/science/math4.tex
+++ b/science/math4.tex
@@ -333,7 +333,7 @@ subtracting EQ 1 from this and dividing by $2$ gives the desired result.
 Let $n_i$: number of vertices with valence $i$, $2e \geq 3F$, $\sum in_i = 2E$.
 \\
 \\
-{\bf solid angle formed by cone with apex at center of sphere and apex angle $\theta$:}
+{\bf Solid angle subtended by cone:} If a cone with apex at center of sphere has apex angle $\theta$,
 $\Omega = 4 \pi sin^2({\frac {\theta} 2})$.
 \\
 \\
