--- a/groups/gtCoprime.tex
+++ b/groups/gtCoprime.tex
@@ -646,7 +646,7 @@ then $T$ is the largest $A-$invariant $p-$subgroup of $G$ normalized by $C_G(A)$
 \begin{quote}
 \emph{Proof:}  
 By previous result, $\exists S \in S_p(G): S^A=A$ and
-$\{P \in S_p(G): P^A=P \} = \{S^c: c \in C_G(A) \}$, so the intersection of theh Sylow groups is
+$\{P \in S_p(G): P^A=P \} = \{S^c: c \in C_G(A) \}$, so the intersection of the Sylow groups is
 $A$-invariant. By previous result, any $A$-invariant $p$-subgroup is contained in an $A$-invariant
 Sylow $p$-group of $G$.  If $U$ is normalized by $C_G(A)$, then $U$ is contained in every $A$-invariant
 Sylow $p$ group and hence their intersection.
