--- a/groups/gtStability.tex
+++ b/groups/gtStability.tex
@@ -116,7 +116,7 @@ Let $W_1$ be a maximal $G$-invariant subspace of $W$.  If $G/C_G(W_1)$ is not a
 $p$-group,then $C_G(W/W_1)$ is not a $p$-group; if $W_1 \ne 0$, again we're done by induction.
 So $G$ acts faithfully and irreducibly on $W$ and if $a, b$ 
 are $p$-elements, they act quadratically and $G$ is not abelian.
-By Schur, $< \langle ab \rangle $ acts as a scalar on a minimal 
+By Schur, $\langle ab \rangle $ acts as a scalar on a minimal 
 $ \langle ab \rangle $-invariant subspace
 of $W$.  $\exists 0 \ne W \in W, \lambda \in F_q^*: w^{ab}= \lambda w$.
 If $w^a \in F_q w$, it is $G$-invariant and $W= F_qw$ by irreducibility and $G$ is
