--- a/groups/gtClassify.tex
+++ b/groups/gtClassify.tex
@@ -447,3 +447,15 @@ $\alpha$ can't act without non-trivial fixed-points on $Q$, contrary to the assu
 $\end{quote}
 \section{Dickson's Theorem}
 Gorenstein 2.8.4
+\section{Simplifying $CN$-theorem}
+
+{\bf Theoerm 1:} Suppose $G$ is a minimal simple $CN$group of odd order and $P, Q \in S_p(G)$ with
+$P \cap Q \ne 1$  Then $P=Q$.
+\begin{quote}
+\end{quote}
+{\bf Theorem 2:} Suppose $G$ is a minimal simple $CN$group of odd order and $P \in S_p(G)$ then
+$P \subseteq N(P)'$.
+\begin{quote}
+\end{quote}
+From Theorem 1, it is clear the minimal counterexample cant be a $3$-step group which gives 14.2.2 
+in Gorenstein.  With these two theorems, we can use $N_G(P)$ in place of $N_G(Z(J(P)))$ in 14.2.3.
