--- a/groups/gtClassify.tex
+++ b/groups/gtClassify.tex
@@ -450,8 +450,7 @@ $\alpha$ can't act without non-trivial fixed-points on $Q$, contrary to the assu
 elementary abelian if $q$ is even and generalized quaternion if $q$ is odd.
 \begin{quote}
 \emph{Proof:}
-$\langle
-\left(
+$ \left(
 \begin{array}{cc}
 \lambda  &  0 \\
 0 &  {\lambda}^{-1} \\
@@ -491,3 +490,67 @@ $P \subseteq N(P)'$.
 From Theorem 1, it is clear the minimal counterexample cant be a $3$-step group which gives 14.2.2 
 in Gorenstein.  With these two theorems, we can use $N_G(P)$ in place of $N_G(Z(J(P)))$ in 14.2.3.
 \section{Some Bender Results}
+{\bf Theorem 3:} If $P \in p(G)$ and $N_G(P)$ is $p$-constrained, so is $C_G(P)$.
+\begin{quote}
+\emph{Proof:}
+\end{quote}
+{\bf Theorem 4:} If $A < G$ is and elementary abelian $p$-groups with $r(A) \geq 3$ and $P, Q $ are
+$A$-invariant $p'$ subgroups of $G$ then $\exists a \in A^{\#}: C_P(a) \ne 1 \ne C_Q(a)$.
+\begin{quote}
+\emph{Proof:}
+\end{quote}
+{\bf Theorem 5:} Suppose $G$ is a group in which every normalizer of a $p$ subgroup is $p$-constrained.
+If $p=2$ assume $cl(P) \leq 2$, $P \in S_p(G)$.  Let $E$ be an abelian $p$ groups with $r(E) \geq 3$ such that
+$E$ contains every $p$-element of $C_G(E)$.  Then $O_{p'}(C_G(E))$ acts transitively on ${\cal N}_G^*(E,q)$,
+$p \ne q$.
+\begin{quote}
+\emph{Proof:}
+\end{quote}
+{\bf Definition:} $S \in S_2(G), S' = 1$ is an $A^*$ group if there is a normal series 
+$1 \subseteq N \subseteq M \subseteq G$ where $N$ and $G/M$ have odd order and $M/N$
+is a direct product of $2$-group and $L_2(q)$ or $JR$.
+\\
+\\
+{\bf Bender UniquenessTheorem:} Let $G$ be a minimal simple group of odd order and $U$ an elementary
+abelian subgroup with $|U|=p^3$.   Then there is one and only one maximal subgroup $U<M<G$.
+\begin{quote}
+\emph{Proof:}
+\end{quote}
+{\bf Bender A:} Let $G$ be an group with abelian $S_2$ subgroups then $G$ is an $A^*$ group.
+\begin{quote}
+\emph{Proof:}
+\end{quote}
+{\bf Theorem 6:} If $G$ is $p$-solvable and $R \in p(G)$ is $p$-stsable if $p \geq 5$ or $SL_2(3)$ is not involved.
+\begin{quote}
+\emph{Proof:}
+\end{quote}
+{\bf Theorem 7:} If $T \in p(G)$ and $M \in p'(G)$ with $M \lhd G$.  Write ${\overline X} = XM/M$.
+$C_{\overline G}({\overline T}) = {\overline {C_G(T)}}$ and
+$N_{\overline G}({\overline T}) = {\overline {N_G(T)}}$.
+\begin{quote}
+\emph{Proof:}
+\end{quote}
+{\bf Theorem 8:} If $G$ is solvable and $R \in p(G)$ then $O_{p'}(C_G(R)) \subseteq O_{p'}(G)$.
+\begin{quote}
+\emph{Proof:}
+\end{quote}
+{\bf Theorem 9:} If $G$ is solvable of odd order and $O_{p}(G)=1$, then $O_{p', p}(G)$ contains every
+normal abelian subgroup in $S in S_p(G)$.
+\begin{quote}
+\emph{Proof:}
+We can assume $O_{p'}(G)=1$. $R= O_p(G)$, $V= R/\Phi(R)$, ${\overline G}= G/R$.
+${\overline G}$ acts faithfully on $V$. $O_p({\overline G}) =1$.  Let $A$ be an abelian
+normal subgroup of $P \in S_q(G)$. $[P, A] \subseteq A$ so $[P, A, A] = 1$ and $[P, A] =1$
+so $[R,A,A]=1$ and ${\overline A}$ has minimal polynomial $(x-1)^2$.  Since $G$ is $p$-stable,
+the minimal polynomial is $x-1$.
+\end{quote}
+{\bf Bender B:} If $A \ne B$ are two maximal subgroups of a simple group $G$ with
+$F^*(A) \subseteq B$ and $F^*(B) \subseteq A$ then
+$F^*(A)$ and $F^*(B)$ are $p$-groups.
+\begin{quote}
+\emph{Proof:}
+\end{quote}
+{\bf Theorem:} If $G$ has a fixed-point-free automorphism of prime order, $p$ then $G$ is nilpotent.
+\begin{quote}
+\emph{Proof:}
+\end{quote}
