--- a/groups/gtRepresentations.tex
+++ b/groups/gtRepresentations.tex
@@ -701,6 +701,7 @@ $$[gh]_{\cal B}=[g]_{\cal B}[h]_{\cal B}=[h]_{\cal B}[g]_{\cal B}=[hg]_{\cal B},
 and so as the representation is faithful we have $gh=hg$ -- so $G$ is
 abelian.
 \end{quote}
+{\bf Note:} The above shows that no non-cyclic abelian group has a faithful representation.
 \section{Characters}
 {\bf Definition:} Let $\rho:G\rightarrow GL_n({\mathbb C})$ be a representation
 of $G$; then the \emph{character} of $\rho$ is the function
