--- a/groups/gtClassify.tex
+++ b/groups/gtClassify.tex
@@ -554,3 +554,19 @@ $F^*(A)$ and $F^*(B)$ are $p$-groups.
 \begin{quote}
 \emph{Proof:}
 \end{quote}
+{\bf Theorem:} Let $K=ccl_G(x)$ where $x$ is a $p$-element.  If $\forall x, y \in K, \langle x , y \rangle \in p(G)$
+then $K \subseteq O_p(G)$
+\begin{quote}
+\emph{Proof:}
+\end{quote}
+{\bf Theorem:} Let $G$ be a group with no non-trivial normal $p$-subgroups, $p \ne 2$ which satisfies
+one of the following:\\
+(a) $|G|$ is odd;\\
+(b) $S \in S_2(G)$ is abelian;\\
+(c) $S \in S_2(G)$ is dihedral;\\
+(d) $G \cong PSL_2(q)$;\\
+(e)  $G$ is solvable and either $p \geq 5$ or $SL_2(3)$ is not involved in $G$;\\
+the $G$ is $p$-stable.
+\begin{quote}
+\emph{Proof:}
+\end{quote}
