--- a/groups/gtClassify.tex
+++ b/groups/gtClassify.tex
@@ -559,6 +559,9 @@ then $K \subseteq O_p(G)$
 \begin{quote}
 \emph{Proof:}
 \end{quote}
+{\bf Theorem:} $G$is $p$-stable iff $G/O_{p'}(G)$ is $p$-stable.
+\begin{quote}
+\end{quote}
 {\bf Theorem:} Let $G$ be a group with no non-trivial normal $p$-subgroups, $p \ne 2$ which satisfies
 one of the following:\\
 (a) $|G|$ is odd;\\
@@ -570,3 +573,13 @@ the $G$ is $p$-stable.
 \begin{quote}
 \emph{Proof:}
 \end{quote}
+{\bf Hall-Higman Theorem:} Let $G$ be $p$-solvable with $O_p(G)=1$ acting on $V$ over $GF(p)$.
+Let $x$ be an element of order $p^n$. The the minimal polynomial for $x$ is $(x-1)^r$ where
+(i) $r=p^n$ or (ii) $\exists n_0 \leq n$ such that $p^{n_0}-1= q^k$ for which $Q \in S_q(G)$
+are non-abelian and $n_0$ is the least such integer and $p^{n-n_0}(p^{n_0}-1) \leq r \leq p^n$.
+\\
+\\
+This was the genisis of $p$-stability when looking identifying groups with $r=2$.  If $x, y$
+are conjugate $p$-elements but $\langle x, y \rangle$ is not a $p$-group and $x$ can be represented
+over $GF(p)$ with quadratic polynomial then $SL_2(3)$ is involved.  Consider $A_8$ and the
+elementary abelian subgroup of order $3^8$.
