--- a/groups/gtAutomorphism.tex
+++ b/groups/gtAutomorphism.tex
@@ -38,15 +38,19 @@ i & 0\\
 {\bf Theorem 5:}  The automorphism group of $Q_8$ is $S_4$.
 \\
 \\
+{\bf Notation:} Suppose $G$ can be represented as a subgroup of $GL_p(V)$.
+Let $\phi_{x}$ be the automorphism induced by $x$ on $V$ in such a representation.
+\\
+\\
 {\bf Theorem 6:} If $H \lhd G \subseteq GL_p(V)$ the $C_V(H)$ is $G$-invariant.
 \begin{quote}
 \emph{Proof:}
-Let $w \in W = C_V(G), h \in H, g \in G$ and let $\phi_{x}$ be the automorphism
-induced by $x$ on $V$.  $g^{-1} h g \in H$ so $\phi_{g^{-1} h g}(w) = 1$.
+Let $w \in W = C_V(G), h \in H, g \in G$ and let $\phi_{x}$ be as above.
+$g^{-1} h g \in H$ so $\phi_{g^{-1} h g}(w) = 1$.
 so $\phi_{g^{-1}} \phi_{h} \phi_{g} (w) = w$ and so $\phi_{h} \phi_{g} (w) = \phi_{g} (w)$.
 Thus $W$ is $G$-invariant.
 \end{quote}
-{\bf Theorem 7:} Let $P \in p(GL_p(V)$.  $\exists v \in V: \phi_{x}(v)= v, \forall x \in P$.
+{\bf Theorem 7:} Let $P \in p(GL_p(V))$.  $\exists v \in V: \phi_{x}(v)= v, \forall x \in P$.
 \begin{quote}
 \emph{Proof:}
 By induction on $|P|$.  Let $M \lhd P$ be maximal so $|P:M|=p$ and put $W=C_V(M)$.
