--- a/groups/gtStability.tex
+++ b/groups/gtStability.tex
@@ -780,7 +780,7 @@ a contradiction.
 \end{quote}
 \section{Alperin-Lyons Proof of Baer}
 {\bf Theorem 24:}  Suppose $x$ is a $p$-element of $G$.  
-$x \in O_p(G)$ iff $ \langle x, x^g \rangle $ is a $\forall g \in G$.
+$x \in O_p(G)$ iff $ \langle x, x^g \rangle $ is a $p$-group $\forall g \in G$.
 \begin{quote}
 \emph{Proof:}
 Let $K= \langle x^G \rangle $ and suppose $z, y \in K \rightarrow \langle z, y \rangle $ 
