--- a/groups/gtAutomorphism.tex
+++ b/groups/gtAutomorphism.tex
@@ -42,7 +42,7 @@ i & 0\\
 Let $\phi_{x}$ be the automorphism induced by $x$ on $V$ in such a representation.
 \\
 \\
-{\bf Theorem 6:} If $H \lhd G \subseteq GL_p(V)$ the $C_V(H)$ is $G$-invariant.
+{\bf Theorem 6:} If $H \lhd G \subseteq GL_p(V)$ then $C_V(H)$ is $G$-invariant.
 \begin{quote}
 \emph{Proof:}
 Let $w \in W = C_V(G), h \in H, g \in G$ and let $\phi_{x}$ be as above.
@@ -58,10 +58,10 @@ By induction, $W \ne 1$ and is $P$-invariant.  Choose $y \in P \setminus M$ then
 $y^p \in M$ so the minimal polynomial for $y$ is $x^p-1 = (x-1)^p$ so there is a $w \in W: [w,y]=1$.
 thus $[w, \langle y, M \rangle ] = 1$.
 \end{quote}
-{\bf Theorem 8:} Let $K \lhd P$ then $K {\mathbb Z}(P) \ne 1$.
+{\bf Theorem 8:} Let $K \lhd P$ then $K \cap {\mathbb Z}(P) \ne 1$.
 \begin{quote}
 \emph{Proof:}
-$H= \Omega_1({\mathbb Z}(K) \ne 1$.  $H \textnormal{char} K \lhd P$ and $H$ is elementary
+$H= \Omega_1({\mathbb Z}(K) \ne 1$.  $H \textnormal{ char } K \lhd P$ and $H$ is elementary
 abelian. Let ${\overline P} = P C_H(P) / C_H(P)$.  Then $C_H({\overline P}) \ne 1$ by Theorem 7.
 So, $1 \ne H \cap {\mathbb Z}(P) \subseteq {\mathbb Z}(P) \cap K$.
 \end{quote}
@@ -80,9 +80,5 @@ has no normal $p$ subgroup.
 \emph{Proof:}
 Suppose $P \lhd G$.  $W= C_V(\phi_{P}) \ne 1$.  But $\phi$ is irreducible so $W=V$.  $\phi_{P}$
 acts trivially on $V$ so $P=1$ since $\phi$ faithful.
-\end{quote}
-{\bf Theorem 11:}
-\begin{quote}
-\emph{Proof:}
 \end{quote}
 
