--- a/groups/gtAutomorphism.tex
+++ b/groups/gtAutomorphism.tex
@@ -73,6 +73,8 @@ $H^{(0)} = H$ and $H^{(i+1)}= [H^{(i)}, x]$ then the minimal polynomial for $x$ 
 where $H^{(r)}=1$.
 \begin{quote}
 \emph{Proof:}
+Put $\psi_x= \phi_x -1$. $\psi_x(h)$ represents $[h, x]$ and $\psi_x^n(h)$ represents $[h,x,\ldots,x]$.
+Since $\phi_x^{p^n} = 1$, $(\phi_x^(h) - 1)^r = 0$ for some $r \mid p^n$, wiht $r$ is the least such integer.
 \end{quote}
 {\bf Theorem 10:} If $G$ has a faithful, irreducible representation over $GF(p)$ then $G$
 has no normal $p$ subgroup.
