--- a/groups/gtClassify.tex
+++ b/groups/gtClassify.tex
@@ -10,7 +10,7 @@ such that:\\
 (a) $C_{M_0}(a) =1, a \in M - M_0$;\\
 (b) $M \cap {M_0}^g = 1$ for $g \in G-M$;\\
 (c) $M_0$ is nilpotent;\\
-(d) $M/M0$ is cyclic; \\
+(d) $M/M_0$ is cyclic; \\
 (e) the union of all such $M_0$'s is a partition of $G$.\\
 The notion of stability shortens the original proof.
 \\
